--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,7 +18,7 @@
 .product-item .pic .subpic img{ max-width: 180px; max-height: 180px; vertical-align: top}
 .product-item .tobuywordBtn{ background-color: #ff2069; font-family: Arial; font-size: 14px; color: #fff; text-decoration: none; width: 95px; height: 30px; text-align: center; line-height: 30px; display: inline-block; position: absolute; bottom: 15px; right: 20px; border-radius: 3px; font-weight: 600}
 .product-item .tobuywordBtn:hover{ background-color: #e91e6f}
-.product-item .rightmall{ position: absolute; bottom: 25px; right: 125px; color: #444}
+.product-item .rightmall{ position: absolute; bottom: 25px; right: 125px; color: #48a753}
 .product-item .rightmall a{ color: #323232; font-weight: 500; font-family: Arial}
 
 
