--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -41,7 +41,10 @@ html,body{ min-width: 960px; margin: 0 auto; background-color: #f1f1f1}
 /*==================== 页脚 ====================*/
 .footBar{ padding: 20px 0; background-color: #34383b; color: #fff; text-align: center; margin-top: 50px}
 .copyright{ padding: 40px 0 20px 0; text-align: center; color: #cacaca; line-height: 25px}
-
+.footBar ul{width: 100%;padding-bottom: 10px;}
+.footBar ul li{display: inline-block;padding-left: 10px;cursor: pointer}
+.footBar ul li a{color: #fff}
+.footBar ul li a:hover{color: #62b4fe}
 
 @media (max-width: 1240px){
 	.link{ overflow: hidden; margin: 0 auto; max-width: 900px}
