--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -108,3 +108,23 @@
 .coupons-items .coupons .item .get-deal{width: 110px;float: right;padding: 25px 0 0 0px; text-align: center;color: #999;}
 .coupons-items .coupons .item .get-deal a{color: #fff;display: block;width: 95px;height: 30px;line-height: 30px;text-align: center;font-size: 15px;border: 0;border-radius: 2px;background: #ff2069}
 .coupons-items .coupons .item .get-deal a:hover{background-color: #e91e6f;}
+
+.load{width:100%;height: 40px;background-color: #fff;border-bottom: 1px solid #f2f2f2;margin: 0 auto}
+.loading{width: 80px;height: 30px;  margin: 0 auto;}
+.loading span{display: inline-block;width: 8px;height: 100%;border-radius: 4px;background: #fd7da8;-webkit-animation: load 1.04s ease infinite;}
+@-webkit-keyframes load{
+    0%,100%{
+        height: 15px;
+        margin-top: 20px;
+        background: #fd7da8;
+    }
+    50%{
+        height: 30px;
+        margin-top: 5px;
+        background: #ff2069;
+    }
+}
+.loading span:nth-child(2){-webkit-animation-delay:0.13s;}
+.loading span:nth-child(3){-webkit-animation-delay:0.26s;}
+.loading span:nth-child(4){-webkit-animation-delay:0.39s;}
+.loading span:nth-child(5){-webkit-animation-delay:0.52s;}
