--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -15,13 +15,14 @@ html,body{ min-width: 960px; margin: 0 auto; background-color: #f1f1f1}
 .headBar .search-box{ height:30px; position:relative}
 .headBar .search-txt{ float:left; border:2px solid #ff2069; width:437px; line-height:28px; height:28px; margin:0; padding:0 0 0 8px}
 .headBar .search-btn{ float:left; width:70px; height:32px; background:#ff2069 url(../images/search_btn.png) no-repeat center;cursor:pointer}
+.headBar .search-btn2{ float:left; width:50px; height:34px; background:#ff2069 url(../images/search_btn.png) no-repeat center;cursor:pointer}
 .headBar .hotword{ padding-top:12px}
 .headBar .hotword a{ padding-right:10px; float: left; color: #666}
 .headBar .hotword a.on{ color:#ff2069}
 
 .navBar{ background-color:#333; color:#fff; z-index:1001}
 .navBar .nav-inner{ width:100%; min-width:960px; max-width:1110px; margin:0 auto; position:relative; z-index:500}
-.navBar .nav-inner li{ height: 34px; line-height: 34px; float: left; width: 76px; text-align: center;cursor: pointer}
+.navBar .nav-inner li{ height: 34px; line-height: 34px; float: left; width: 90px; text-align: center;cursor: pointer}
 .navBar .nav-inner a{ color: #fff; font-size: 14px; font-weight: bold;height: 34px; line-height: 34px;display:block}
 .navBar .nav-inner li.on{ background:#ff2069}
 .navBar .nav-inner li:hover{ background:#ff2069}
