--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -9,9 +9,10 @@ html,body{ min-width: 960px; margin: 0 auto; background-color: #f1f1f1}
 
 /*==================== 头部导航 ====================*/
 .headBar{ background-color: #fff}
-.headBar .inner{ width:100%; min-width:960px; max-width:1110px; height:120px; margin:0 auto; position:relative; z-index:500}
-.headBar .logo{ background:url(); float:left; width:204px; height:52px; background-size:100%; margin-top:35px; font-size: 4em; color: #444; font-style: italic}
-.headBar .search{ width:520px; position:absolute; top:40px; left:50%; margin-left:-240px}
+.headBar .inner{ width:100%; min-width:960px; max-width:1110px; height:80px; margin:0 auto; position:relative; z-index:500}
+.headBar .logo{ background:url(); float:left; width:150px; background-size:100%; margin-top:10px; font-size: 4em; color: #444; font-style: italic}
+.headBar .logo img{width:100%;height:auto;}
+.headBar .search{ width:520px; position:absolute; top:25px; left:50%; margin-left:-240px}
 .headBar .search-box{ height:30px; position:relative}
 .headBar .search-txt{ float:left; border:2px solid #ff2069; width:437px; line-height:28px; height:28px; margin:0; padding:0 0 0 8px}
 .headBar .search-btn{ float:left; width:70px; height:32px; background:#ff2069 url(../images/search_btn.png) no-repeat center;cursor:pointer}
