--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -128,3 +128,16 @@
 .loading span:nth-child(3){-webkit-animation-delay:0.26s;}
 .loading span:nth-child(4){-webkit-animation-delay:0.39s;}
 .loading span:nth-child(5){-webkit-animation-delay:0.52s;}
+
+/*首页top商品*/
+.banner-hot{width:90%; max-width:1110px; min-width:960px;display: block;margin:0px auto;}
+.banner-hot .panel{margin-top:0px;}
+.banner-hot .item{width: 20%;background: #f1f1f1;float: left}
+.banner-hot .item a{position:relative;width: 92%;margin: 4%;display: block;border: 1px solid #f1f1f1;cursor: pointer;background: #fff;}
+.banner-hot .item a:hover{box-shadow:0 0 6px #ddd;}
+
+.banner-hot .item .pack{width: 92%;margin: 4%;display: block}
+.banner-hot .item .subpic{ width: 100%;height:0px;padding-bottom:100%;overflow: hidden; }
+.banner-hot .item .subpic img{width:100%;background-size:cover;height: auto;}
+.banner-hot .item p{visibility:visible;	padding:4px 4% 3px 4%;width:92%;font-size:12px;height: 34px;line-height: 17px;position:absolute;bottom:0px;display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 2;overflow: hidden;color: #fff;background:#000;opacity:.7;filter:alpha(opacity=70);}
+.banner-hot .item:hover p{visibility: visible;}
